--- a/ex.html
+++ b/ex.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE7" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>example</title>
+  <title>www.example.com</title>
   <link href="css/bootstrap.css" rel="stylesheet">
 <style type="text/css" >
 #heading{
